third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_field_invalid.no-opt.exp

Diagnostics:
error: cannot read local `s` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_field_invalid.move:12:9
   │
11 │         let f = &mut s.f;
   │                 -------- field `f` previously mutably borrowed here
12 │         *s;
   │         ^^ read attempted here
13 │         *f;
   │         -- conflicting reference `f` used here

error: cannot read local `s` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_field_invalid.move:16:9
   │
15 │         let f = id_mut(&mut s.f);
   │                 ---------------- field `f` previously mutably borrowed here
16 │         *s;
   │         ^^ read attempted here
17 │         *f;
   │         -- conflicting reference `f` used here
